# note_new

10_Cookbook/: GDB命令速查.md
30_KnowHow/C语言/: C_Macro_Expansion.md  DMA、volatile 与 PCIe BAR 空间.md  static_inline_and_extern.md
30_KnowHow/Linux/: find.md
30_KnowHow/communication/: Modbus内存访问模型.md
30_KnowHow/control/: 同步控制的确定性原则.md
30_KnowHow/plc/: PLC软元件与地址映射模型.md
30_KnowHow/架构/: ViewModel的作用.md  区分Domain和UseCase.md  设备状态和 UI状态.md
30_KnowHow/正则表达式/: 正则表达式-从应用到原理.md
30_KnowHow/重构/: DomainModel.md  TDDPrinciple.md
40_Projects/MiniMotion_Demo/: CMakeLists.txt  main.cpp
40_Projects/MiniMotion_Demo/docs/: 1_UI层接口设计.md  架构说明.md
40_Projects/MiniMotion_Demo/qml/: Main.qml  MotorDashboard.qml
40_Projects/PA/ICS2025/: README.md
40_Projects/PA/english/: 常见词汇记录.md
40_Projects/PLCSimulator/: 工业 PLC 模拟器需求说明书.MD  架构.md
40_Projects/PLCSimulator/daily/: 0316.md  0317.md  0318.md
40_Projects/csac/: csac手册单词.md
40_Projects/dds/: AD5932扫频时间计算.md  DDS多通道功放控制系统接口设计 V2.3.md  功放烤机接口初步设计实现.md
40_Projects/http/: 第一周实现目标 —— Mini HTTP Server（Tinyhttpd 学习版）.md
40_Projects/servo/: P100S的DO输出与抱闸.md  伺服控制器PAD使用手册.md  位置移动问题.md  双电机点动和位置移动与单电机差异.md  点动移动问题.md  物理限位接线及伺服配置清单.md  相对和绝对位置描述.md  组合限位测试清单.md
40_Projects/servo/PLC/: 电机需求.md
40_Projects/servo/design/: README.md
40_Projects/singleBeam/: SD卡升级boot.md
50_Worklog/: README.md
50_Worklog/Reviews/: 2025-W01-能力回顾.md
50_Worklog/Weekly/: 2025-W01.md  2025-W02.md  2025-W03.md  2026-W09.md  2026-W10.md
60_Personal/: 2026年财务规划.md  2026项目驱动路线.md  3.3_关于AI工作流的思考.md
60_Personal/work/: boss工作综合.md
(+262 files in other folders)
